# PolyMath

./: CMakeLists.txt
PolyApp/: CMakeLists.txt  PolyApp.cpp  PolyApp.h
PolyApp/Containers/: List.h  Vector.h
PolyApp/Polynomial/: Monom.h  Polynomial.h
PolyApp/Tables/: AVLTreeTable.h  ChainMethod.hpp  LinearTableOnAnArray.h  MyExcepions.hpp  OpenHashTable.hpp  OrderedArray.hpp  TableInterface.hpp  linearListTable.hpp
